<resources>
    <string name="app_name">骨骼肌</string>
    <string name="month_1">1月</string>
    <string name="month_2">2月</string>
    <string name="month_3">3月</string>
    <string name="month_4">4月</string>
    <string name="month_5">5月</string>
    <string name="month_6">6月</string>
    <string name="month_7">7月</string>
    <string name="month_8">8月</string>
    <string name="month_9">9月</string>
    <string name="month_10">10月</string>
    <string name="month_11">11月</string>
    <string name="month_12">12月</string>
    <string name="times">次数</string>
    <string name="weight_kg">体重(kg)</string>
    <string name="request_failed">请求失败</string>
    <string name="login_login">登 录</string>
    <string name="login_title">请输入手机号获取验证码</string>
    <string name="login_phone_title">手机号注册/登录</string>
    <string name="login_input_phone">请输入手机号</string>
    <string name="login_input_code">请输入验证码</string>
    <string name="login_agreement">已阅读并同意《骨骼肌用户协议》和《隐私协议》</string>
    <string name="login_agreement_no_checked">请选择已阅读并同意骨骼肌用户协议 和 隐私协议</string>
    <string name="login_btn_wechat">微信登录</string>
    <string name="login_title_wechat">微信扫码登录</string>
    <string name="login_get_verification_code">获取验证码</string>
    <string name="login_count_down">剩余%d秒</string>
    <string name="login_input_success_phone">手机号不正确</string>
    <string name="service_agreement_title">用户服务协议</string>
    <string name="privacy_policy_title">隐私政策</string>
    <string name="login_get_verification_code_failed">获取验证码失败</string>
    <string name="login_login_failed">登录失败</string>
    <string name="input_name_title">先让我们熟悉起来吧</string>
    <string name="input_name_tips">请输入姓名</string>
    <string name="input_name_hint">请输入您的姓名</string>
    <string name="select_gender_title">您的性别是？</string>
    <string name="select_gender_man">我是男性</string>
    <string name="select_gender_woman">我是女性</string>
    <string name="born_title">您的出生日期</string>
    <string name="born_year">年</string>
    <string name="born_month">月</string>
    <string name="born_day">日</string>
    <string name="height_title">您的身高是？</string>
    <string name="weight_title">您的体重是？</string>
    <string name="waist_line_title">您的腰围是？</string>
    <string name="day_one_week_title">最后两个问题，您一星期运动几天？</string>
    <string name="sports_time_title">最后一个问题，平均每次运动多长时间？</string>
    <string name="sports_type_title">您平时做什么运动（可多选）？</string>
    <string name="sports_type_no">无</string>
    <string name="sports_type_run">跑步</string>
    <string name="sports_type_hie">快走</string>
    <string name="sports_type_jumping_rope">跳绳</string>
    <string name="sports_type_badminton">羽毛球</string>
    <string name="sports_type_jumping_exercises">跳操</string>
    <string name="disease_title">您是否曾被确诊或患有以下疾病？</string>
    <string name="main_tip_detail">运动时应穿着宽松合适的运动服和鞋类，避免拖鞋，正确佩戴监测设备以确保数据准确。运动前进行充分热身，按计划进行心肺训练，运动后至少放松1分钟。如感到不适，立即停止并咨询家庭医生。</string>
    <string name="main_tip">运动小贴士</string>
    <string name="disease_please_input_disease">请输入运动疾病</string>
    <string name="disease_please_selected_detail">请选择病情详情</string>
    <string name="previous_step">上一步</string>
    <string name="fill_in_later">稍后填写</string>
    <string name="next_step">下一步</string>
    <string name="jump">跳过</string>
    <string name="sports_customer">自定义</string>
    <string name="add">添加</string>
    <string name="sure">确定</string>
    <string name="take_photo">拍照</string>
    <string name="album">相册</string>
    <string name="cancel">取消</string>
    <string name="please_look_video">请观看演示视频</string>
    <string name="main_start_sports">运动处方</string>
    <string name="main_start_sports_evaluation">运动测评</string>
    <string name="main_score">今日得分</string>
    <string name="main_my_data">今日数据</string>
    <string name="main_my_sports_data">今日数据</string>
    <string name="main_sports_time">运动时长</string>
    <string name="main_heart_rate">心率区间</string>
    <string name="main_heart_avg">平均心率</string>
    <string name="main_endurance">心肺耐力</string>
    <string name="main_dumbbell_weight">哑铃重量</string>
    <string name="main_heat">消耗热量</string>
    <string name="main_min">分钟</string>
    <string name="main_times">次</string>
    <string name="main_times_angle">次°</string>
    <string name="main_rate">/分</string>
    <string name="main_kilocalorie">千卡</string>
    <string name="main_kg">千克</string>
    <string name="main_total_score">/100</string>
    <string name="times_of_minute">次/分</string>
    <string name="unit_times_of_minute">分</string>
    <string name="calendar_title">运动打卡日记</string>
    <string name="calendar_pre_month">前一月</string>
    <string name="calendar_next_month">下一月</string>
    <string name="today_sports_data_title">看看今日运动数据吧</string>
    <string name="today_sports_data_share">分享</string>
    <string name="today_sports_data_recorde">运动日历</string>
    <string name="today_sports_data_type1">高抬腿运动</string>
    <string name="today_sports_data_type2">哑铃运动</string>
    <string name="today_sports_data_type3">平板支撑运动</string>
    <string name="today_sports_data_type4">心率区间</string>
    <string name="today_sports_data_type5">运动时长</string>
    <string name="today_sports_data_type6">肌肉比例</string>
    <string name="today_sports_data_type7">有氧能耗</string>
    <string name="today_sports_data_exercise_amount">运动量</string>
    <string name="today_sports_data_up_times">上举次数</string>
    <string name="today_sports_data_expand_chest_amount">扩胸次数</string>
    <string name="today_sports_data_avg_angle">平均角度</string>
    <string name="today_sports_data_avg">平均</string>
    <string name="today_sports_data_max">最高</string>
    <string name="today_sports_data_leg_angle">抬腿角度</string>
    <string name="today_sports_data_min">/分钟</string>
    <string name="today_sports_data_kilocalorie">千卡</string>
    <string name="today_sports_detail_break_through">极限突破</string>
    <string name="today_sports_detail_heart_enhancement">心肺提升</string>
    <string name="today_sports_detail_fat_burn">高效燃脂</string>
    <string name="today_sports_detail_active">暖身激活</string>
    <string name="today_sports_detail_time">时长(分钟)</string>
    <string name="today_sports_detail_kilocalorie">消耗(千卡)</string>
    <string name="today_sports_detail_calorie">消耗卡路里</string>
    <string name="today_sports_detail_heart_time">心率(次)</string>
    <string name="today_sports_detail_average">平均</string>
    <string name="today_sports_detail_max">最高</string>
    <string name="today_sports_detail_left_leg_avg_angle">左腿平均</string>
    <string name="today_sports_detail_right_leg_avg_angle">右腿平均</string>
    <string name="today_sports_detail_up_avg_angle">上举平均</string>
    <string name="today_sports_detail_expand_chest_avg_angle">扩胸平均</string>
    <string name="today_sports_detail_left_leg">左腿</string>
    <string name="today_sports_detail_right_leg">右腿</string>
    <string name="today_sports_detail_all_sports_kilocalorie">所有运动消耗卡路里</string>
    <string name="sports_record_pre_day">前一天</string>
    <string name="sports_record_next_day">后一天</string>
    <string name="sports_record_sport_time">运动强度与时间</string>
    <string name="sports_record_all_sports_score">今日运动得分</string>
    <string name="sports_record_all_sports_time">总运动</string>
    <string name="sports_record_total_consumption">总消耗</string>
    <string name="sports_record_avg_heart_rate">平均心率</string>
    <string name="sports_record_avg_high_angle">抬腿平均角度</string>
    <string name="sports_record_avg">平均：</string>
    <string name="sports_record_max">最高：</string>
    <string name="sports_record_upleft">上举：</string>
    <string name="sports_record_expand_chest">扩胸：</string>
    <string name="today_sports_title">选择您今天想完成的运动</string>
    <string name="today_sports_start">选择运动计划</string>
    <string name="today_sports_exercise_intensity_mid">中强度</string>
    <string name="today_sports_type">选择运动类型</string>
    <string name="today_sports_height_leg_detail">此运动主要针对下肢肌群，特别是股四头肌、腹直肌及背部肌群，能够有效增强心肺功能及耐力。</string>
    <string name="today_sports_dumbbell_detail">哑铃训练主要强化上肢肌群以及胸背部肌群，有助于提升上肢力量并改善心肺功能。</string>
    <string name="today_sports_plank_detail">该运动主要作用于腹肌和背肌，能够有效减少腹部脂肪堆积，促进核心力量发展。</string>
    <string name="exercise_plan_title">选择您的运动计划</string>
    <string name="exercise_plan_sports_data">运动处方</string>
    <string name="exercise_plan_sports_time">运动时间</string>
    <string name="exercise_plan_sports_time_up">上举时间</string>
    <string name="exercise_plan_sports_time_expand">扩胸时间</string>
    <string name="exercise_plan_foot_height">抬脚高度</string>
    <string name="exercise_plan_dumbbell_weight">哑铃重量</string>
    <string name="exercise_plan_uplift">上举</string>
    <string name="exercise_plan_expand_chest">扩胸</string>
    <string name="exercise_plan_link_device">连接设备</string>
    <string name="exercise_plan_start_sports">开始运动</string>
    <string name="exercise_plan_start">开始</string>
    <string name="exercise_plan_wrist_watch">连接心率手表</string>
    <string name="exercise_plan_left_knee">左膝传感器</string>
    <string name="exercise_plan_right_knee">右膝传感器</string>
    <string name="exercise_plan_right_dumbbell">右哑铃</string>
    <string name="exercise_plan_left_dumbbell">左哑铃</string>
    <string name="hand_grips_left_device">左手握力</string>
    <string name="hand_grips_right_device">又手握力</string>
    <string name="hand_grips_connect_left_device_title">请取出左手握力器</string>
    <string name="hand_grips_connect_left_device_connected_title">左手握力器已连接成功</string>
    <string name="hand_grips_connect_left_device_connect">连接左手握力器</string>
    <string name="hand_grips_connect_left_device_step1">取出左手握力器</string>
    <string name="hand_grips_connect_left_device_step2">手握左手握力器</string>
    <string name="hand_grips_connect_left_device_step3">检查传感器</string>
    <string name="hand_grips_connect_right_device_title">请取出右手握力器</string>
    <string name="hand_grips_connect_right_device_connected_title">右手握力器已连接成功</string>
    <string name="hand_grips_connect_right_device_connect">连接右手握力器</string>
    <string name="hand_grips_connect_right_device_step1">取出右手握力器</string>
    <string name="hand_grips_connect_right_device_step2">手握右手握力器</string>
    <string name="hand_grips_connect_right_device_step3">检查传感器</string>
    <string name="dumbbell_connect_left_device_title">请将左手哑铃握在左手上</string>
    <string name="dumbbell_connect_left_device_connect">左手哑铃已连接成功</string>
    <string name="dumbbell_connect_left_device_connected_title">连接左手哑铃</string>
    <string name="dumbbell_connect_left_device_step1">●\u0020 取出左手哑铃</string>
    <string name="dumbbell_connect_left_device_step2">●\u0020 手握左手哑铃</string>
    <string name="dumbbell_connect_left_device_step3">●\u0020 检查传感器</string>
    <string name="dumbbell_connect_right_device_title">请将右手哑铃握在右手上</string>
    <string name="dumbbell_connect_right_device_connect">右手哑铃已连接成功</string>
    <string name="dumbbell_connect_right_device_connected_title">连接右手哑铃</string>
    <string name="dumbbell_connect_right_device_step1">●\u0020 取出右手哑铃</string>
    <string name="dumbbell_connect_right_device_step2">●\u0020 手握右手哑铃</string>
    <string name="dumbbell_connect_right_device_step3">●\u0020 检查传感器</string>
    <string name="high_knee_guide_reconnect">点击重连</string>
    <string name="high_knee_guide_step2_connect_wristband">连接心率手表</string>
    <string name="high_knee_guide_step2_wear_wristband">●\u0020 正确佩戴手环</string>
    <string name="high_knee_guide_step2_long_press">●\u0020 开启心率手表</string>
    <string name="high_knee_guide_step2_check">●\u0020 检查配套松紧</string>
    <string name="setting_userinfo">个人资料</string>
    <string name="setting_userinfo_des">管理您的基础信息或修改资料等。</string>
    <string name="setting_avatar">头像</string>
    <string name="setting_user_name">姓名</string>
    <string name="setting_mobile">手机号</string>
    <string name="setting_born">出生年月日</string>
    <string name="setting_sex">性别</string>
    <string name="setting_weight">体重</string>
    <string name="setting_height">身高</string>
    <string name="setting_waist_lin">腰围</string>
    <string name="setting_exit">退出登录</string>
</resources>