<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/color_e7ebef"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/albumTv"
        android:layout_width="match_parent"
        android:text="@string/album"
        android:textSize="@dimen/text_size_3"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_white_top_round_20"
        android:gravity="center"
        android:layout_height="70dp"/>

    <TextView
        android:id="@+id/takePhotoTv"
        android:layout_width="match_parent"
        android:text="@string/take_photo"
        android:textSize="@dimen/text_size_3"
        android:layout_marginTop="1dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_white_bottom_round_20"
        android:gravity="center"
        android:layout_height="70dp"/>
    <TextView
        android:id="@+id/cancelTv"
        android:layout_width="match_parent"
        android:text="@string/cancel"
        android:textSize="@dimen/text_size_3"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_white_round_20"
        android:gravity="center"
        android:textColor="@color/color_blue"
        android:layout_height="70dp"/>
</androidx.appcompat.widget.LinearLayoutCompat>
