<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.fjp.skeletalmuscle.viewmodel.state.UserInfoViewModel" />

        <variable
            name="click"
            type="com.fjp.skeletalmuscle.ui.setting.fragment.UserInfoFragment.ProxyClick" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <View
                    android:id="@+id/rtView"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:background="@drawable/bg_white_round_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/userIv"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="61dp"
                    android:background="@drawable/setting_userinfo_max"
                    app:layout_constraintStart_toStartOf="@+id/rtView"
                    app:layout_constraintTop_toTopOf="@+id/rtView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="23dp"
                    android:text="@string/setting_userinfo"
                    android:textColor="@color/color_cc1c1c1c"
                    android:textSize="@dimen/text_size_3"
                    app:layout_constraintStart_toEndOf="@+id/userIv"
                    app:layout_constraintTop_toTopOf="@+id/userIv" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="23dp"
                    android:text="@string/setting_userinfo_des"
                    android:textColor="@color/color_cc1c1c1c"
                    android:textSize="@dimen/text_size_4"
                    app:layout_constraintBottom_toBottomOf="@+id/userIv"
                    app:layout_constraintStart_toEndOf="@+id/userIv" />

                <com.fjp.skeletalmuscle.app.weight.SettingItemLayout
                    android:id="@+id/avatarLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="@{()->click.clickUpdateAvatar()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rtView"
                    app:roundTop="true"
                    app:title="@string/setting_avatar" />

                <com.fjp.skeletalmuscle.app.weight.SettingItemLayout
                    android:id="@+id/userNameLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:onClick="@{()->click.clickUpdateUserName()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/avatarLayout"
                    app:title="@string/setting_user_name" />

                <com.fjp.skeletalmuscle.app.weight.SettingItemLayout
                    android:id="@+id/phoneLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:onClick="@{()->click.clickUpdatePhone()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userNameLayout"
                    app:roundBottom="true"
                    app:title="@string/setting_mobile" />

                <com.fjp.skeletalmuscle.app.weight.SettingItemLayout
                    android:id="@+id/bornLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="@{()->click.clickUpdateBorn()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phoneLayout"
                    app:roundTop="true"
                    app:title="@string/setting_born" />

                <com.fjp.skeletalmuscle.app.weight.SettingItemLayout
                    android:id="@+id/sexLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:onClick="@{()->click.clickUpdateSex()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bornLayout"
                    app:roundBottom="true"
                    app:title="@string/setting_sex" />

                <com.fjp.skeletalmuscle.app.weight.SettingItemLayout
                    android:id="@+id/weightLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="@{()->click.clickUpdateWeight()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sexLayout"
                    app:roundTop="true"
                    app:title="@string/setting_weight" />

                <com.fjp.skeletalmuscle.app.weight.SettingItemLayout
                    android:id="@+id/heightLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:onClick="@{()->click.clickUpdateHeight()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weightLayout"
                    app:title="@string/setting_height" />

                <com.fjp.skeletalmuscle.app.weight.SettingItemLayout
                    android:id="@+id/waistLinLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:onClick="@{()->click.clickUpdateWaistLine()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/heightLayout"
                    app:roundBottom="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="150dp"
                    app:title="@string/setting_waist_lin" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/nextBtn"
            style="@style/SMButtonNext"
            android:layout_width="240dp"
            android:onClick="@{()-> click.clickExit()}"
            android:text="@string/setting_exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>