<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.fjp.skeletalmuscle.viewmodel.state.HighKneeGuideStep2ViewModel" />
        <variable
            name="click"
            type="com.fjp.skeletalmuscle.ui.deviceconnectguide.fragment.HighKneeGuideStep2Fragment.Proxy" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/bg_step1"
        android:layout_height="match_parent">
        <include
            layout="@layout/layout_title"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            app:viewModel="@{viewModel}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="93dp" />
        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="516dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/hight_knee_guide3_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="318dp"
            tools:ignore="ContentDescription" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/midGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />

        <TextView
            android:id="@+id/step2Tv"
            android:layout_width="wrap_content"
            android:textSize="46sp"
            app:layout_constraintStart_toStartOf="@+id/midGuideline"
            android:text="@string/high_knee_guide_step2_connect_wristband"
            android:textColor="@color/color_332c2c2c"
            app:drawableStartCompat="@drawable/guide1_step2_1"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/title_layout"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/step2_1Tv"
            android:layout_width="wrap_content"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="@+id/step2Tv"
            app:layout_constraintTop_toBottomOf="@+id/step2Tv"
            android:layout_marginTop="32dp"
            android:text="@string/high_knee_guide_step2_wear_wristband"
            android:drawablePadding="16dp"
            android:textColor="@color/color_332c2c2c"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/step2_2Tv"
            android:layout_width="wrap_content"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="@+id/step2Tv"
            app:layout_constraintTop_toBottomOf="@+id/step2_1Tv"
            android:layout_marginTop="32dp"
            android:drawablePadding="16dp"
            android:text="@string/high_knee_guide_step2_long_press"
            android:textColor="@color/color_222"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/step2_3Tv"
            android:layout_width="wrap_content"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="@+id/step2Tv"
            app:layout_constraintTop_toBottomOf="@+id/step2_2Tv"
            android:layout_marginTop="32dp"
            android:drawablePadding="16dp"
            android:text="@string/high_knee_guide_step2_check"
            android:textColor="@color/color_332c2c2c"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/reconnectBtn"
            style="@style/SMButtonPre"
            android:visibility="gone"
            android:layout_width="240dp"
            android:layout_marginEnd="547dp"
            android:layout_marginBottom="45dp"
            android:onClick="@{()-> click.clickReconnect()}"
            android:background="@drawable/bg_yellow_round_20"
            android:text="@string/high_knee_guide_reconnect"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/preBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>