<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="LabelFor">

    <data>

        <variable
            name="viewModel"
            type="com.fjp.skeletalmuscle.viewmodel.state.BornViewModel" />

        <variable
            name="click"
            type="com.fjp.skeletalmuscle.ui.user.BornActivity.ProxyClick" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        tools:context=".ui.user.InputNameActivity">

        <include
            layout="@layout/layout_title"
            app:viewModel="@{viewModel}" />

        <View
            android:id="@+id/midView"
            android:layout_width="0dp"
            android:layout_height="242dp"
            android:background="@drawable/bg_gray_round_20"
            app:layout_constraintBottom_toTopOf="@+id/nextBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_layout" />

        <EditText
            android:id="@+id/yearTv"
            android:layout_width="160dp"
            android:layout_height="165dp"
            android:layout_marginStart="43dp"
            android:background="@drawable/bg_born_round_20"
            android:text="@{viewModel.year}"
            android:textColor="@color/color_1c1c1c"
            android:textSize="62sp"
            android:paddingStart="10dp"
            android:gravity="center"
            android:lines="1"
            android:paddingEnd="10dp"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/midView"
            app:layout_constraintStart_toStartOf="@+id/midView"
            app:layout_constraintTop_toTopOf="@+id/midView"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/yearLabTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/born_year"
            android:textColor="@color/color_801c1c1c"
            android:textSize="44sp"
            app:layout_constraintBottom_toBottomOf="@+id/midView"
            app:layout_constraintStart_toEndOf="@+id/yearTv"
            app:layout_constraintTop_toTopOf="@+id/midView" />
        <EditText
            android:id="@+id/monthTv"
            android:layout_width="130dp"
            android:layout_height="165dp"
            android:layout_marginStart="43dp"
            android:background="@drawable/bg_born_round_20"
            android:text="@{viewModel.month}"
            android:textColor="@color/color_1c1c1c"
            android:textSize="62sp"
            android:gravity="center"
            android:inputType="number"
            android:lines="1"
            app:layout_constraintBottom_toBottomOf="@+id/midView"
            app:layout_constraintStart_toEndOf="@+id/yearLabTv"
            app:layout_constraintTop_toTopOf="@+id/midView"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/monthLabTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/born_month"
            android:textColor="@color/color_801c1c1c"
            android:textSize="44sp"
            app:layout_constraintBottom_toBottomOf="@+id/midView"
            app:layout_constraintStart_toEndOf="@+id/monthTv"
            app:layout_constraintTop_toTopOf="@+id/midView" />
        <EditText
            android:id="@+id/dayEt"
            android:layout_width="130dp"
            android:layout_height="165dp"
            android:layout_marginStart="43dp"
            android:background="@drawable/bg_born_round_20"
            android:text="@{viewModel.day}"
            android:textColor="@color/color_1c1c1c"
            android:textSize="62sp"
            android:gravity="center"
            android:lines="1"
            app:layout_constraintBottom_toBottomOf="@+id/midView"
            app:layout_constraintStart_toEndOf="@+id/monthLabTv"
            app:layout_constraintTop_toTopOf="@+id/midView"
            android:inputType="number"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/dayLabTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/born_day"
            android:textColor="@color/color_801c1c1c"
            android:textSize="44sp"
            app:layout_constraintBottom_toBottomOf="@+id/midView"
            app:layout_constraintStart_toEndOf="@+id/dayEt"
            app:layout_constraintTop_toTopOf="@+id/midView" />
        <Button
            android:id="@+id/nextBtn"
            style="@style/SMButtonNext"
            android:layout_width="240dp"
            android:layout_marginBottom="45dp"
            android:text="@string/next_step"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            bind:noRepeatClick="@{()-> click.next()}" />

        <Button
            style="@style/SMButtonPre"
            android:layout_width="240dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="45dp"
            android:onClick="@{()-> click.finish()}"
            android:text="@string/previous_step"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nextBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>